# drc_transformer

./: .gitignore  LICENSE.md  README.md  development_and_test.ipynb  pyproject.toml
.ipynb_checkpoints/: development_and_test-checkpoint.ipynb
docs/: documentation_eng.html  documentation_rus.html  documentation_rus.md
drcompress/: __init__.py  compression.py  transformer.py
src/drcompress/: __init__.py  transformer.py
tests/: test_drctransformer.py
